# Chatservers

./: CMakeLists.txt
include/: deletecopy.h  mylog.h  public.h
include/client/: clientservice.h  gettime.h
include/server/: chatserver.h  chatservice.h
include/server/db/: mymysql.h  mysqlpool.h  redis.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.h  usermodel.h
src/: CMakeLists.txt
src/client/: clientmain.cc  clientservice.cc  gettime.cc
src/server/: CMakeLists.txt  chatmian.cc  chatserver.cc  chatservice.cc  mian.cc
src/server/db/: mymysql.cc  mysqlpool.cc  redis.cc
src/server/model/: friendmodel.cc  groupmodel.cc  offlinemessagemodel.cc  usermodel.cc
